Set MaxPermSize in Jenkinsfile
Match arguments from pom.xml